Добаляет все стили по д/з 3

--- a/index.html
+++ b/index.html
@@ -92,13 +92,25 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work list">
             <li class="item">
-              <img src="./images/box-1.jpg" alt="Компьтер и планшет" width="370" height="294" />
+              <img
+                src="./images/box-1.jpg"
+                class="photo"
+                alt="Компьтер и планшет"
+                width="370"
+                height="294"
+              />
             </li>
             <li class="item">
-              <img src="./images/box-2.jpg" alt="Ноутбук и смартфон" width="370" height="294" />
+              <img
+                src="./images/box-2.jpg"
+                class="photo"
+                alt="Ноутбук и смартфон"
+                width="370"
+                height="294"
+              />
             </li>
             <li class="item">
-              <img src="./images/box-3.jpg" alt="Планшет" width="370" height="294" />
+              <img src="./images/box-3.jpg" class="photo" alt="Планшет" width="370" height="294" />
             </li>
           </ul>
         </div>
@@ -111,27 +123,59 @@
           <ul class="team list">
             <!--Демьяненко-->
             <li class="item">
-              <img src="./images/демьяненко.jpg" alt="Product Designer" width="270" height="260" />
-              <h3 class="title">Игорь Демьяненко</h3>
-              <p lang="en" class="position">Product Designer</p>
+              <img
+                src="./images/демьяненко.jpg"
+                class="photo"
+                alt="Product Designer"
+                width="270"
+                height="260"
+              />
+              <div class="about-team">
+                <h3 class="title">Игорь Демьяненко</h3>
+                <p lang="en" class="position">Product Designer</p>
+              </div>
             </li>
             <!--Репина-->
             <li class="item">
-              <img src="./images/репина.jpg" alt="Frontend Developer" width="270" height="260" />
-              <h3 class="title">Ольга Репина</h3>
-              <p lang="en" class="position">Frontend Developer</p>
+              <img
+                src="./images/репина.jpg"
+                class="photo"
+                alt="Frontend Developer"
+                width="270"
+                height="260"
+              />
+              <div class="about-team">
+                <h3 class="title">Ольга Репина</h3>
+                <p lang="en" class="position">Frontend Developer</p>
+              </div>
             </li>
             <!--Тарасов-->
             <li class="item">
-              <img src="./images/тарасов.jpg" alt="Marketing" width="270" height="260" />
-              <h3 class="title">Николай Тарасов</h3>
-              <p lang="en" class="position">Marketing</p>
+              <img
+                src="./images/тарасов.jpg"
+                class="photo"
+                alt="Marketing"
+                width="270"
+                height="260"
+              />
+              <div class="about-team">
+                <h3 class="title">Николай Тарасов</h3>
+                <p lang="en" class="position">Marketing</p>
+              </div>
             </li>
             <!--Ермаков-->
             <li class="item">
-              <img src="./images/ермаков.jpg" alt="UI Designer" width="270" height="260" />
-              <h3 class="title">Михаил Ермаков</h3>
-              <p lang="en" class="position">UI Designer</p>
+              <img
+                src="./images/ермаков.jpg"
+                class="photo"
+                alt="UI Designer"
+                width="270"
+                height="260"
+              />
+              <div class="about-team">
+                <h3 class="title">Михаил Ермаков</h3>
+                <p lang="en" class="position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
