--- a/portfolio.html
+++ b/portfolio.html
@@ -61,70 +61,125 @@
         <ul class="projects list">
           <li class="item">
             <a>
-              <img src="./images/img1.jpg" alt="Ноутбук" width="370" height="294" />
-              <h2 class="title">Технокряк</h2>
-              <p class="kind">Веб-сайт</p>
+              <img src="./images/img1.jpg" class="photo" alt="Ноутбук" width="370" height="294" />
+              <div class="about-project">
+                <h2 class="title">Технокряк</h2>
+                <p class="kind">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a>
-              <img src="./images/img2.jpg" alt="Два баскетболиста" width="370" height="294" />
-              <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p class="kind">Дизайн</p>
+              <img
+                src="./images/img2.jpg"
+                class="photo"
+                alt="Два баскетболиста"
+                width="370"
+                height="294"
+              />
+              <div class="about-project">
+                <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                <p class="kind">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a>
-              <img src="./images/img3.jpg" alt="Логотип ресторана" width="370" height="294" />
-              <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="kind">Приложение</p>
+              <img
+                src="./images/img3.jpg"
+                class="photo"
+                alt="Логотип ресторана"
+                width="370"
+                height="294"
+              />
+              <div class="about-project">
+                <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="kind">Приложение</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a>
-              <img src="./images/img4.jpg" alt="Наушники" width="370" height="294" />
-              <h2 class="title">Проект <span lang="en">Prime</span></h2>
-              <p class="kind">Маркетинг</p>
+              <img src="./images/img4.jpg" class="photo" alt="Наушники" width="370" height="294" />
+              <div class="about-project">
+                <h2 class="title">Проект <span lang="en">Prime</span></h2>
+                <p class="kind">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a>
-              <img src="./images/img5.jpg" alt="Две коробки" width="370" height="294" />
-              <h2 class="title">Проект <span>Boxes</span></h2>
-              <p class="kind">Приложение</p>
+              <img
+                src="./images/img5.jpg"
+                class="photo"
+                alt="Две коробки"
+                width="370"
+                height="294"
+              />
+              <div class="about-project">
+                <h2 class="title">Проект <span>Boxes</span></h2>
+                <p class="kind">Приложение</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a>
-              <img src="./images/img6.jpg" alt="Веб-сайт на компьютере" width="370" height="294" />
-              <h2 class="title"><span lang="en">Inspiration has no Borders</span></h2>
-              <p class="kind">Веб-сайт</p>
+              <img
+                src="./images/img6.jpg"
+                class="photo"
+                alt="Веб-сайт на компьютере"
+                width="370"
+                height="294"
+              />
+              <div class="about-project">
+                <h2 class="title"><span lang="en">Inspiration has no Borders</span></h2>
+                <p class="kind">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a>
-              <img src="./images/img7.jpg" alt="Открытая книга" width="370" height="294" />
-              <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
-              <p class="kind">Дизайн</p>
+              <img
+                src="./images/img7.jpg"
+                class="photo"
+                alt="Открытая книга"
+                width="370"
+                height="294"
+              />
+              <div class="about-project">
+                <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
+                <p class="kind">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a>
-              <img src="./images/img8.jpg" alt="Бирка проекта" width="370" height="294" />
-              <h2 class="title">Проект <span lang="en">LAB</span></h2>
-              <p class="kind">Маркетинг</p>
+              <img
+                src="./images/img8.jpg"
+                class="photo"
+                alt="Бирка проекта"
+                width="370"
+                height="294"
+              />
+              <div class="about-project">
+                <h2 class="title">Проект <span lang="en">LAB</span></h2>
+                <p class="kind">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a>
               <img
                 src="./images/img9.jpg"
+                class="photo"
                 alt="Ноутбук с отрытым приложением"
                 width="370"
                 height="294"
               />
-              <h2 class="title"><span lang="en">Growing Business</span></h2>
-              <p class="kind">Приложение</p>
+              <div class="about-project">
+                <h2 class="title"><span lang="en">Growing Business</span></h2>
+                <p class="kind">Приложение</p>
+              </div>
             </a>
           </li>
         </ul>
