Добавляет правки ментора

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,11 +51,11 @@
         <h1 class="section-title visually-hidden">Портфолио</h1>
         <!-- Кнопки -->
         <ul class="filter list">
-          <li><button type="button" class="button secondary">Все</button></li>
-          <li><button type="button" class="button secondary">Веб-сайты</button></li>
-          <li><button type="button" class="button secondary">Приложения</button></li>
-          <li><button type="button" class="button secondary">Дизайн</button></li>
-          <li><button type="button" class="button secondary">Маркетинг</button></li>
+          <li class="item"><button type="button" class="button secondary">Все</button></li>
+          <li class="item"><button type="button" class="button secondary">Веб-сайты</button></li>
+          <li class="item"><button type="button" class="button secondary">Приложения</button></li>
+          <li class="item"><button type="button" class="button secondary">Дизайн</button></li>
+          <li class="item"><button type="button" class="button secondary">Маркетинг</button></li>
         </ul>
         <!-- Проекты -->
         <ul class="projects list">
@@ -192,8 +192,10 @@
         <a href="./index.html" class="name studio">Web<span class="name-second">Studio</span></a>
         <address class="location">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="connection list">
-          <li><a href="mailto:info@devstudio.com" class="phone">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="mail">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="phone">info@devstudio.com</a>
+          </li>
+          <li class="item"><a href="tel:+380961111111" class="mail">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </footer>
