--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
         <a href="./index.html" class="name studio">Web<span class="name-second">Studio</span></a>
         <address class="location">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="connection list">
-          <li><a href="mailto:info@devstudio.com" class="phone">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="mail">+38 096 111 11 11</a></li>
+          <li class="item"><a href="mailto:info@devstudio.com" class="phone">info@devstudio.com</a></li>
+          <li class="item"><a href="tel:+380961111111" class="mail">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </footer>
